# python-project

./: README.md  pyproject.toml
src/python_project/: main.py
